<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewComp">

    <ScrollView
        android:id="@+id/widget54"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/log"
                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="153dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_complaints"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/texIns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/name_of_institution"
                android:textColor="#000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/circle" />

            <TextView
                android:id="@+id/texSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/subject"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/circle"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <TextView
                android:id="@+id/texdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/small_description"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/circle"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="403dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp">

                <Button
                    android:id="@+id/btnsend"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/btnAtt"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:text="@string/attachment"
                    android:layout_marginStart="50dp"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    tools:ignore="RtlHardcoded"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>