<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shahi.citizenscomplaints.Home">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_citizens_complaints"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnNew"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:background="@drawable/circle1"
            android:text="@string/new_complaints"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="178dp"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/log"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="153dp"
            android:layout_marginTop="32dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription=""
            tools:ignore="ContentDescription" />
        <Button
            android:id="@+id/btnfollow"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:background="@drawable/circle1"
            android:text="@string/follow_complaints"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="278dp"
            android:layout_below="@+id/btnNew"
            android:layout_alignLeft="@+id/btnNew"
            android:layout_alignStart="@+id/btnNew"
            android:layout_marginTop="34dp" />
        <Button
            android:id="@+id/btnregist"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@null"
            android:text="@string/new_user"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
