<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shahi.citizenscomplaints.Register">

    <ScrollView
        android:id="@+id/widget54"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/log"
                    tools:ignore="ContentDescription"
                    tools:layout_editor_absoluteX="175dp"
                    tools:layout_editor_absoluteY="153dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:text="@string/register_new_user"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textCit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/citizens_name"
                        android:textColor="#000"
                        android:textSize="18sp" />

                <EditText
                    android:id="@+id/edCit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:layout_gravity="center"
                    android:padding="15dp" />
                <TextView
                    android:id="@+id/textPho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edPho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle"
                    android:ems="10"
                    android:inputType="phone"
                    android:layout_gravity="center"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/textId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/national_id"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edNational"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle"
                    android:ems="10"
                    android:inputType="textAutoComplete"
                    android:layout_gravity="center"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/textAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:inputType="textPersonName"
                    android:padding="15dp" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/circle"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    android:layout_marginTop="20dp"
                    tools:ignore="RtlHardcoded"
                    android:layout_marginBottom="25dp"/>
            </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
