<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shahi.citizenscomplaints.Login">

    <ScrollView
        android:id="@+id/widget54"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/log"
                    tools:ignore="ContentDescription"
                    tools:layout_editor_absoluteX="175dp"
                    tools:layout_editor_absoluteY="153dp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/follow_your_complaints"
                    android:textColor="#000"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />


                <TextView
                    android:id="@+id/citId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/citizens_id"
                    android:textColor="#000"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <EditText
                    android:id="@+id/edIdNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/circle"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/citPho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/phone"
                    android:textColor="#000"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <EditText
                    android:id="@+id/edPhNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/circle"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/logQuery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/circle"
                    android:text="@string/query"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
